--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,27 +1,27 @@
-<% if @message.errors.any? %>
+<% if @songs.errors.any? %>
   <div>
-    <strong>Some issues with your message, please fix them:</strong>
+    <strong>Some issues with your entry, please fix them:</strong>
     <ul>
-      <% @message.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% @songs.errors.full_messages.each do |song| %>
+        <li><%= song %></li>
       <% end %>
     </ul>
   </div>
 <% end %>
 
 
-<form method="post" action="/messages">
+<form method="post" action="/songs">
   <div>
-    <label>Author:</label>
-    <input type="text" name="author" value="<%= @message.author %>">
+    <label>Artist:</label>
+    <input type="text" name="author" value="<%= @songs.author %>">
   </div>
   <div>
-    <label>Subject:</label>
-    <input type="text" name="title" value="<%= @message.title %>">
+    <label>Title:</label>
+    <input type="text" name="song_title" value="<%= @songs.song_title %>">
   </div>
   <div>
-    <label>Content:</label>
-    <input type="text" name="content" value="<%= @message.content %>">
+    <label>Url:</label>
+    <input type="text" name="content" value="<%= @songs.url %>">
   </div>
   <div>
     <input type="submit" value="Submit">
